# meteogram

./: .gitignore  README.md  main.py  pyproject.toml
meteogram/: __init__.py  api.py  collector.py  plot.py  selector.py  settings.py  utils.py
test/: configuration.yaml  events.csv
