[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meteogram"
version = "0.1.0"
description = "Flexible Plotly helpers for building meteogram subplots and full figures"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "plotly>=5.0.0",
    "xarray>=0.20.2",
    "zxarray",
]

[project.scripts]
meteogram-demo = "main:main"
