[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meteogram"
version = "0.1.0"
description = "Flexible Plotly helpers for building meteogram subplots and full figures"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "plotly>=5.0.0",
    "xarray>=0.20.2",
    "scipy>=1.15",
    "pyyaml>=6.0.3",
    "pytz>=2026.1.post1",
    "utm>=0.8.1",
    "ipykernel>=7.2.0",
]

[project.scripts]
meteogram-demo = "main:main"
